# generative-turbulence

./: .gitignore  CITATION.cff  README.md  justfile  pyproject.toml  train.py
config/: regression_experiment.yaml  shapes_experiment.yaml  shapes_lr_sweep.yaml  shapes_regression_experiment.yaml  train.yaml
config/data/: regression.yaml  shapes-seq.yaml  shapes.yaml
config/hydra/launcher/: slurm.yaml
config/model/: diffusion.yaml  dilresnet.yaml  tfnet.yaml
scripts/: autocorrelation.py  channel-3d.py  dataset-stats.py  download-dataset.sh  eval_ckpt.py  evaluate-dataset.py  evaluate-from-initial.py  evaluate-runtime.py  evaluate-with-precision.py  extract-dataset.sh  first-turbulent-frame.py  foam2h5.py  gaussian-smoothing-error.py  generate-2d-3d-comparison.py  generate-2d-3d-regression.py  generate-performance-dataset.py  generate-shapes.py  generate_utils.py  grid-embedding.py  homogeneous-regions.py  les-case.py  max-mean-tke.py  mean-flow.py  mean-forecast-errors.py  sample-metrics.py  save-numgrid-grids.py  solve-slurm.py  split-2d-3d-regression.py  split-hdf5.py
scripts/les-template/: Allrun  entrypoint.sh  parReconstructPar
scripts/les-template/constant/: momentumTransport  physicalProperties
scripts/les-template/initial-conditions/: U  k  nut  p
scripts/les-template/system/: controlDict  decomposeParDict  fvSchemes  fvSolution
turbdiff/: __init__.py  callbacks.py  config.py  metrics.py  mlp.py  openfoam.lark  openfoam.py  plots.py  sequential.py  time_limit.py  turbdiff.mplstyle
turbdiff/data/: __init__.py  ofles.py  ofles_seq.py
turbdiff/models/: attention.py  cell_type_embeddings.py  conditioning.py  ddpm.py  diffusion.py  dilresnet.py  metrics.py  normalization.py  numgrids.pickle  regression.py  tfnet.py  utils.py
turbdiff/utils/: __init__.py  callbacks.py  exceptions.py  index.py  logging.py  seed.py  wandb.py
